--- a/front/public/main.css
+++ b/front/public/main.css
@@ -1,3 +1,7 @@
+body {
+  background: #dce6fa;
+}
+
 .main-container {
   display: flex;
   flex-direction: column;
@@ -6,9 +10,72 @@
 
 .container {
   flex: 1;
+  background: #fff;
+  margin: 10px auto 10px auto;
+  padding: 0;
+}
+
+.products-title {
+  margin: 40px 0 10px 0;
+  padding: 0 0 20px 0;
+  text-align: center;
+  border-bottom: 5px solid #034ea1;
+}
+
+.products-title-text {
+  font-family: Lato-Regular, Arial, sans-serif;
+  text-transform: uppercase;
+  color: #034ea1;
+  font-size: 32px;
+}
+
+.card-products {
+  justify-content: space-around;
+  padding: 20px 0 40px 0;
 }
 
 .footer {
   margin-top: auto;
   background-color: blue;
+}
+
+.navbar-wrapper {
+  font-family: Lato-Regular, Arial, sans-serif;
+  text-transform: uppercase;
+}
+
+.navbar-nav a {
+  color: #fff !important;
+  margin: 0 5px 0 5px;
+}
+
+.navbar-nav a:hover {
+  color: #ffd537 !important;
+}
+
+.carousel-title {
+  text-align: left;
+  font-family: Lato-Light, Arial, sans-serif;
+  text-transform: uppercase;
+  font-size: 32px;
+  line-height: 32px;
+  margin: 16px 15px 50px 25px;
+}
+
+.carousel-title-wrapper {
+  width: 100%;
+  left: 0;
+  bottom: 0;
+  height: 100px;
+  padding: 0;
+  background: rgba(65, 91, 40, 0.7);
+}
+
+.header-contact {
+  display: flex;
+  font-size: 15px;
+  margin: 20px 0 0 0;
+  flex-direction: column;
+  align-items: flex-end;
+  color: #034ea1 !important;
 }
