front new changes

--- a/front/public/main.css
+++ b/front/public/main.css
@@ -5,7 +5,7 @@ body {
 .main-container {
   display: flex;
   flex-direction: column;
-  min-height: 100vh;
+  min-height: 80vh;
 }
 
 .container {
@@ -78,4 +78,15 @@ body {
   flex-direction: column;
   align-items: flex-end;
   color: #034ea1 !important;
+}
+
+.login-title {
+  font-family: Lato-Regular, Arial, sans-serif;
+  text-transform: uppercase;
+  color: #034ea1;
+  font-size: 32px;
+  margin: 40px 0 40px 0;
+  padding: 0 0 20px 0;
+  text-align: center;
+  border-bottom: 5px solid #034ea1;
 }
