--- a/front/public/main.css
+++ b/front/public/main.css
@@ -1,5 +1,6 @@
 body {
   background: #dce6fa;
+  font-family: Lato-Light, Arial, sans-serif;
 }
 
 .main-container {
@@ -13,6 +14,16 @@ body {
   background: #fff;
   margin: 10px auto 10px auto;
   padding: 0;
+}
+
+.btn-blue-umk {
+  color: #fff;
+  background-color: #034ea1;
+}
+
+.btn-blue-umk:hover {
+  color: #034ea1;
+  background: #fff;
 }
 
 .products-title {
@@ -89,4 +100,61 @@ body {
   padding: 0 0 20px 0;
   text-align: center;
   border-bottom: 5px solid #034ea1;
+}
+
+.basket-icon {
+  margin: 0 10px 0 0;
+  color: #fff;
+  font-size: 34px;
+  line-height: 0;
+}
+
+.basket-icon:hover {
+  color: #ffd537 !important;
+}
+
+.single-product-wrapper {
+  display: flex;
+  flex-wrap: wrap;
+  margin: 20px;
+}
+
+.single-product-descr {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  flex: 0.75;
+}
+
+.single-product-descr-section {
+  min-width: 30rem;
+  margin: 10px 0 10px 0;
+  flex: unset;
+  background-color: #ffd537;
+  color: #034ea1;
+  font-size: 18px;
+}
+
+.product-price {
+  font-size: 36px;
+}
+
+.product-add-to-cart {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-transform: uppercase;
+}
+
+.small-product-wrapper {
+  width: 18rem;
+  margin: 10px 0 10px 0;
+  flex: unset !important;
+  color: #034ea1;
+}
+.small-product-wrapper:hover {
+  width: 18rem;
+  margin: 10px 0 10px 0;
+  flex: unset !important;
+  background-color: #ffd537;
 }
