--- a/front/public/main.css
+++ b/front/public/main.css
@@ -230,3 +230,11 @@ body {
   font-weight: bold;
   color: #ffd537;
 }
+
+.admin-dashboard-list-el {
+  color: #034ea1;
+  font-family: Lato-Regular, Arial, sans-serif;
+  text-transform: uppercase;
+  font-size: 20px;
+  margin: 10px 0;
+}
